Screen 2 url and screen 3 alignment fixes

--- a/src/components/Screen2/screen2.styles.css
+++ b/src/components/Screen2/screen2.styles.css
@@ -73,8 +73,8 @@ input{
     .Content2{
         width: 330px;
     }
+
     .UrlHost{
-        width: 74px;
         font-size: xx-small;
     }
   }
